cmake_minimum_required(VERSION 3.0.2)
project(crashlab_gui)


find_package(catkin REQUIRED COMPONENTS
  rospy
  std_msgs
)


catkin_package(

  CATKIN_DEPENDS rospy std_msgs

)

include_directories(
# include
  ${catkin_INCLUDE_DIRS}
)


catkin_install_python(PROGRAMS
   scripts/test.py
   scripts/pub_node.py
   scripts/eyes.py
   scripts/eyes_2.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )

